# poneglyph

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bench/: compare.sh  profile_rss.sh
docs/: install.md  parity.md
fixtures/: large.md  mermaid.md  outline-heavy.md  preview-rich.md  small.md
scripts/: bun-oracle.ts  side-by-side.py  structural-parity.py
src/: app.rs  config.rs  debug_emit.rs  main.rs  markdown.rs  theme.rs  ui.rs
themes/: ayu-mirage.toml  catppuccin.toml  cyberpunk.toml  dracula.toml  ember.toml  everforest.toml  github-dark.toml  gruvbox.toml  kanagawa.toml  monokai.toml  moss.toml  night-owl.toml  nocturne.toml  nord.toml  oceanic.toml  one-dark.toml  palenight.toml  rose-pine.toml  shades-of-purple.toml  slate.toml  tokyo-night.toml
