[package]
name = "md-editor-rust"
version = "0.1.0"
edition = "2021"
description = "Rust/Ratatui parity port spike of md-editor"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
